# social_nav_sim

./: README.md
agent/: CMakeLists.txt  package.xml
agent/launch/: agent.launch  agent_default.launch
agent/param/: default.yaml
agent/param/ckpts/: 5d_rel_holo.pt  5d_rel_uni.pt
agent/src/: agent_node.py
agent/src/policy/: dummy.py  social_force.py  srnn.py
agent/src/state/: obstacle.py  robot.py
assets/: CMakeLists.txt  package.xml
assets/models/big_box/: model.sdf
assets/models/debris_1_2/: model.sdf
assets/models/goal_marker/: model.config  model.sdf
assets/models/oak_tree/: model.sdf
environment/: CMakeLists.txt  package.xml
environment/launch/: create_nav_world.launch  create_nav_world_default.launch  environment_node.launch  environment_node_default.launch
environment/param/: default.yaml
environment/src/: environment_node.py  generate_social_nav_world.py  utils.py
environment/src/state/: model.py
environment/srv/: Run.srv
environment/worlds/: social_nav_env.world
main/: package.xml
main/launch/: 10s10d_orca.launch  5d_abs_holo.launch  5d_abs_uni.launch  5d_rel_holo.launch  5d_rel_uni.launch
main/rviz/: default.rviz
obstacle/animated_obstacle_plugin/: CMakeLists.txt  package.xml
obstacle/animated_obstacle_plugin/include/: animated_obstacle_plugin.hh
obstacle/animated_obstacle_plugin/src/: animated_obstacle_plugin_ros.cc
obstacle/animated_obstacle_plugin/srv/: GetPose.srv  GetVel.srv  Init.srv  SetPose.srv
obstacle/obstacle_manager/: CMakeLists.txt  package.xml
robots/Humic/: README.md
(+23 files in other folders)
